# PCallDemo

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/johnsoft/pcalldemo/: MainActivity.java  SettingsActivity.java
app/src/main/res/layout/: activity_settings.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
pcall/: CMakeLists.txt  build.gradle  jvmti.sh
pcall/src/main/: AndroidManifest.xml
pcall/src/main/cpp/: jvmti.h  jvmti_helper.cpp  jvmti_helper.h  pcall.cpp  scoped_local_ref.h
pcalla/: build.gradle
pcalla/src/main/java/com/johnsoft/pcalla/: Finder.java  Replacer.java
pcalla/src/main/java/com/johnsoft/pcalldemo/: SettingsActivity.java
